--- a/website/fire-website/src/index.css
+++ b/website/fire-website/src/index.css
@@ -80,7 +80,8 @@ z-index: 0;
   padding-top: 0.25em;
   position: relative;
   z-index: 1000;
-  height: 300px;
+  height: 150px;
+  border-radius: "25px";
   
 }
 ._hide-visual {
